Adding --illegal-access=permit flag by default